# axum-web

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml  mysql.sql
assets/: .gitignore  script.js  ws.html
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/model/: store.rs  user.rs
crates/libs/lib-utils/: Cargo.toml
crates/libs/lib-utils/src/: ip_library.rs  lib.rs
crates/services/web-server/: .gitignore  Cargo.toml
crates/services/web-server/assets/locales/: zh.yaml
crates/services/web-server/assets/web/: login.html  users.html
crates/services/web-server/http/: test.http
crates/services/web-server/src/: controllers.rs  main.rs  models.rs  routes.rs
crates/services/web-server/src/controllers/: http.rs  ip.rs  login.rs  users.rs  ws.rs
crates/services/web-server/src/controllers/ip/: mod.rs
crates/services/web-server/src/controllers/login/: mod.rs
crates/services/web-server/src/controllers/users/: mod.rs
crates/services/web-server/src/controllers/ws/: mod.rs
crates/services/web-server/src/databases/: mod.rs
crates/services/web-server/src/middlewares/: auth.rs
crates/services/web-server/src/models/: ip.rs  mod.rs
crates/services/web-server/src/models/users/: mod.rs
crates/services/web-server/src/routes/: http.rs  mod.rs  status.rs  test.rs  users.rs
crates/services/web-server/src/services/: users.rs
crates/services/web-server/src/utils/: response.rs
crates/services/web-server/src/utils/ipdb/: mod.rs
crates/services/web-server/src/utils/response/: client.rs  server.rs  status_code.rs
crates/services/web-server/tests/: http.rs
crates/tools/gen-key/: Cargo.toml
http/: http-client.env.json  test.http  web-server.http
sql/: mysql.sql
src/: main.rs
src/active_records/: user.rs
src/controllers/: mod.rs
src/controllers/cookie/: mod.rs
src/controllers/ip/: mod.rs
src/controllers/login/: mod.rs
src/controllers/status/: mod.rs
src/controllers/test/: mod.rs
src/controllers/users/: mod.rs
src/database/: mod.rs
src/middlewares/auth/: mod.rs
src/models/: mod.rs
src/models/auth/: mod.rs
src/models/users/: mod.rs
src/routes/: ip.rs  login.rs  mod.rs  root.rs  test.rs  users.rs  ws.rs
src/schema/: user.rs
src/schemas/: user.rs
src/services/: users.rs
src/utils/: mod.rs
src/utils/ipdb/: mod.rs
src/utils/response/: client.rs  error.rs  mod.rs  server.rs
src/utils/response/error/: client.rs
src/utils/response/status/: mod.rs
