[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.0", features = ["mysql", "runtime-tokio-native-tls"] }
serde = { version = "1.0.195", features = ["derive"] }