[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["default", "ws", "http2"] }
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["add-extension", "trace", "fs", "tracing", "compression-full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

redis = { version = "0.24.0", features = ['tokio-comp'] }
redis_pool = "*"
serde_json = { version = "1.0.100" }
bytes = { version = "1.4.0", features = ["serde"] }
mime = "0.3.17"
tower-cookies = "0.10.0"
lazy-regex = "3.0.0"
maxminddb = { version = "0.24", features = ["mmap"] }
axum-macros = "0.4.1"
lib-core = { path = "../../libs/lib-core" }
lib-auth = { path = "../../libs/lib-auth" }
lib-utils = { path = "../../libs/lib-utils" }
lib-rpc = { path = "../../libs/lib-rpc" }
axum-extra = { version = "0.9.2", features = ["typed-header", "cookie", "form", "multipart", "protobuf", "query"] }
dotenv = { version = "0.15.0", features = ["cli"] }
axum_session = { version = "0.12.4", features = ["redis-db"] }
reqwest = "0.11.24"
lazy_static = "1.4.0"

[dev-dependencies]
anyhow = "1.0.17"
httpc-test = "0.1.4"
