[package]
name = "axum-web"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8", features = ["default", "ws", "http2"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["add-extension", "trace", "fs", "tracing", "compression-full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

redis = { version = "0.27", features = ['tokio-comp'] }
redis_pool = "0.6" # dependencies 0.27.x,unsupport 0.28
serde_json = { version = "1.0" }
tower-cookies = "0.11"
maxminddb = { version = "0.24", features = ["mmap"] }
axum-macros = "0.5"
lib-core = { path = "../../libs/lib-core" }
lib-auth = { path = "../../libs/lib-auth" }
lib-utils = { path = "../../libs/lib-utils" }
lib-rpc = { path = "../../libs/lib-rpc" }
axum-extra = { version = "0.10", features = ["typed-header", "cookie", "form", "multipart", "protobuf", "query"] }
dotenv = { version = "0.15.0", features = ["cli"] }
axum_session = { version = "0.15" }
axum_session_redispool = { version = "0.4", features = [] }
reqwest = "0.12"
lazy_static = "1.5"
listenfd = "1.0"

[dev-dependencies]
anyhow = "1.0.17"
httpc-test = "0.1.4"
